assets/themes/twitter/css/style.css
body {
  opacity: 1.0;
  -webkit-transition: background 1.5s linear;
  -moz-transition: background 1.5s linear;
  -o-transition: background 1.5s linear;
  -ms-transition: background 1.5s linear;
  transition: background 1.5s linear;
  transition: background-image 1s ease-in-out;
  background-image: url(../../../images/global/white.png);
  padding-top: 20px;
}

/* @media screen and (max-width: 768px) {
    body { padding-top: 0px; }
} */

p {
  font-size: 1.2rem;
  line-height: 1.65;
  padding-bottom: 10px;
  padding-top: 10px;
}

h1 {
  font-size: 2.8rem;
  color: rgb(44, 44, 44);
  text-rendering: geometricPrecision;
  text-align: center;
  /* font-family: 'Ibm Plex Mono', monospace; */
  font-family: 'Rubik', sans-serif;
}

hr {
  margin-top: 30px;
  margin-bottom: 30px;
}

table,
th,
td {
  border: 2px solid rgb(62, 62, 62);
  padding: 12px;
}

strong {
  /* background-color: #ab86c8 !important; */
  border-style: solid;
  border-color: #efefef;
  border-width: medium;
  font-weight: 100;
  font-family: 'IBM Plex', monospace;
  /* font-family: 'IBM Plex Mono', monospace; */
  padding-left: 5px;
  padding-right: 5px;
  margin-left: 2px;
  font-size: .9em;
  /* color: white; */
  margin-right: 2px;
}

th tr td {
  border: 2px solid rgb(0, 0, 0);
}


tbody :nth-child(even) td {
  background-color: #ececec;
}

table {
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  font-family: 'Ibm Plex Mono';
  font-size: 13px;
  font-weight: bold;
}

th {
  font-size: 1em;
}

.table a
{
    display:block;
    text-decoration:none;
}

img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 33em;
  margin-top: 30px;
  margin-bottom: 30px;
}

.principleImg {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 50px;
  margin-bottom: 30px;
}

.principleDescription {
  display: block;
  margin-left: auto;
  margin-right: auto;
  text-align: center; 
  padding-top: 20px;
  padding-bottom: 0;
  max-width: 600px;
}

.principleTable {
  border: none;  
}
.principleTable tr,td,th {
  border: none;
}

.dependencyTable th {
  background-color: #ffdfae;
}

.platformTable th {
  background-color: #d9ffae;
}


.wrapper {
  font-family: 'IBM Plex Mono';
}

.cards {
  margin-right: auto;
  margin-left: auto;
}

.container-narrow {
  margin: 0 auto;
  min-width: 700px !important;
  max-width: 1000px !important;
}

.container-content {
  padding-top: 60px;
}

.container-narrow>hr {
  margin: 30px 0;
}

.navbar .nav {
  float: right;
}

.navbar .ui {
  padding: 0;
}

.navbar-inner {
  border: none;
  border-radius: 0;
}

.navbar {
  background-image: linear-gradient(to right, black, rgb(34, 34, 34), black);
  font-family: 'Roboto', monospace;
}

.brand {
  font-family: 'Inconsolata', monospace;
  text-transform: uppercase;
  color: rgb(255, 255, 255) !important;
  /* Overrides bootstrap.min.css */
  text-shadow: none;
  text-rendering: geometricPrecision;
  font-weight: normal;
}

/* posts index */
.post>h3.title {
  position: relative;
  padding-top: 10px;
}

.post>h3.title span.date {
  text-align: center;
}

.post>.more {
  margin: 10px 0;
  text-align: left;
}

/* post-full*/
.post-full .date {
  margin-bottom: 20px;
  font-weight: bold;
}

/* tag_box */
.tag_box {
  list-style: none;
  margin: 0;
  overflow: hidden;
}

.tag_box li {
  line-height: 28px;
}

.tag_box li i {
  opacity: 0.9;
}

.tag_box.inline li {
  float: left;
}

.tag_box a {
  padding: 3px 6px;
  margin: 2px;
  background: #eee;
  color: #555;
  border-radius: 3px;
  text-decoration: none;
  border: 1px dashed #cccccc;
}

.tag_box a span {
  vertical-align: super;
  font-size: 0.8em;
}

.tag_box a:hover {
  background-color: #e5e5e5;
}

.tag_box a.active {
  background: #57A957;
  border: 1px solid #4c964d;
  color: #FFF;
}

.content {
  font-family: 'Ibm Plex Sans', sans-serif;
  background-color: white;
  padding: 60px;
  line-height: 20pt;
}

blockquote {
  border-left-width: 1px;
  border-left-style: solid;
  border-left-color: rgb(200, 200, 200);
  color: rgb(100, 100, 100);
  padding-left: 40px;
  margin-top: 10px;
  margin-bottom: 40px;
}

blockquote p {
  font-size: 20px;
  line-height: 30px;
}

.introtext {
  color: rgb(0, 0, 0);
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: rgb(3, 3, 3);
  border-right-width: 4px;
  border-right-style: solid;
  border-right-color: rgb(0, 0, 0);
  padding-left: 50px;
  padding-right: 50px;
  margin-top: 10px;
  margin-bottom: 40px;
  font-size: 17px;
  line-height: 26px
}

h2,
h3,
h4,
h5 {
  padding-top: 20px;
  padding-bottom: 20px;
}

h2 {
  margin: 20px;
  margin-left: 0px;
  text-rendering: geometricPrecision;
  font-size: 2.3em;
  padding-top: 30px;
  padding-bottom: 30px;
}

p::-moz-selection {
  background: #fff2a8;
}

p::selection {
  background: #fff2a8;
}

strong::selection {
  background: rgb(137, 245, 182);
}

a::selection {
  background: rgb(238, 252, 255);
}

h2::selection {
  background: black;
  color: white;
}

blockquote p::selection {
  background: #e5caff;
}

code {
  background-color: rgb(27, 25, 27) !important;
  color: white;
  background-color: inherit !important;
  /* color: white; */
  /* margin: 20px !important; */
}

pre {
  color: white;
  background-color: #a996c0;
  padding: 40px;
}

.page-header {
  padding-top: 50px;
  padding-bottom: 9px;
  text-align: center;
}

.principle-desription {
    font-family: 'Frank Ruhl Libre', serif;
    font-size: 40px;
    line-height: 40px;
    color: gray;
}

/* The sidebar menu */
.sidenav {
  height: 100%;
  width: 300px;
  position: fixed;
  z-index: 1;
  top: 0;
  /* font-size: 17px; */
  /* line-height: 20px; */
  left: 0;
  color: rgb(22, 22, 22);
  overflow-x: hidden;
  background-color: #fafafa;
  overflow-x: hidden;
  padding-top: 90px;
  font-family: 'Roboto', monospace;
  border: #b3b3b3;
  border-style: solid;
  border-width: 1px;
}

.jstree-container-ul.jstree-children {
  padding-left: 10px;
}

li a {
  font-size: 0.9em;
}

.aka {
  font-style: italic;
  color: grey;
  padding: 0;
  margin: 0;
  text-align: center;
}

/* Style page content */
.main {
  margin-left: 160px;
  /* Same as the width of the sidebar */
  padding: 0px 10px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidenav {
    width: 200px;
  }

  .sidenav a {
    font-size: 18px;
  }
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: rgb(0, 153, 140);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

/* New item background badge */
.newitem {
  background-image: url(../../../images/global/new_tag.png);
  background-position: fixed;
  background-position: right 30px center;
  background-repeat: no-repeat;
}

/* Modified item background badge */
.moditem {
  background-image: url(../../../images/global/mod_tag.png);
  background-position: fixed;
  background-position: right 30px center;
  background-repeat: no-repeat;
}

.sketchfab-embed-wrapper {
  padding: 30px;
}

